--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*@import url('https://fonts.google.com/);*/
+
+* {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 :root
 {
     --backDark : rgb(40, 40, 40);
@@ -12,3 +18,103 @@ body{
 body.header{
     border-bottom: solid 1px var(--fontBase);
 }
+header{
+    border-bottom: 1px solid grey;
+    border: 2px solid green;
+    display: block;
+    margin: 0 auto 0 auto;
+    width: 83vw;
+}
+aside{
+    position: fixed;
+    top: 12.5vh;
+    height: 75vh;
+    border: 2px solid blue;
+}
+iframe{
+    border:0;
+    overflow: hidden;
+    width: 20vw;
+    height: 100%;
+}
+.navbar iframe{
+    border: 2px solid red;
+    display: none;
+}
+.navbar:hover iframe{
+    display: block;
+}
+main{
+    border: 2px solid yellow;
+    display: block;
+    margin: 0 auto 0 auto;
+    width: 83vw;
+}
+footer{
+    border: 1px solid orange;
+    position: fixed;
+    bottom: 0;
+    height: 12.5vh;
+    width:100%;
+}
+
+
+
+/* ANIMATIONS */
+@-webkit-keyframes slideInLeft {
+    from {
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+    }
+  
+    to {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  
+  @keyframes slideInLeft {
+    from {
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+    }
+  
+    to {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  @-webkit-keyframes slideOutLeft {
+    from {
+      transform: translate3d(0, 0, 0);
+    }
+  
+    to {
+      visibility: hidden;
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+  
+  @keyframes slideOutLeft {
+    from {
+      transform: translate3d(0, 0, 0);
+    }
+  
+    to {
+      visibility: hidden;
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+  
+  .navbar iframe{
+    animation-name: slideOutLeft;
+
+    animation-duration: 0.25s;
+    animation-fill-mode: both;
+  }
+
+  .navbar:hover iframe{
+    animation-name: slideInLeft;
+
+    animation-duration: 0.25s;
+    animation-fill-mode: both;
+  }
