--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--backDark);
     color: var(--fontBase);
 }
@@ -32,7 +33,7 @@ a:hover {
     color: hsl(var(--Hue), 80%, 80%);
 }
 
-.header-nav{
+.header-nav {
     background-color: var(--bg_nav);
 }
 
@@ -48,21 +49,24 @@ a:hover {
     background-color: var(--fontBase);
 }
 
-.dropdown-title{
-    padding: 10px 38px;
-}
 
-.header-nav ul{
+.header-nav>ul {
     margin-top: 0;
-    margin-left: -20px;
+    padding: 0;
 }
 
-.header-nav li{
+.header-nav>ul ul {
+    margin-top: 0px;
+    padding-left: 1.5em;
+}
+
+.header-nav>ul li {
     list-style: none;
+    padding-left: .5em;
 }
 
-.header-nav img{
-    height: 34px;
+.header-nav img {
+    height: 2.5em;
 }
 
 header {
@@ -72,7 +76,7 @@ header {
     width: 83vw;
 }
 
-h1{
+h1 {
     border-bottom: 1px solid grey;
     width: 50vw;
     display: block;
@@ -80,11 +84,12 @@ h1{
     padding-bottom: 5px;
 }
 
-.subtitle, h1{
+.subtitle,
+h1 {
     text-align: center;
 }
 
-.subtitle{
+.subtitle {
     padding-top: 10px;
 }
 
@@ -118,21 +123,21 @@ main {
     width: 83vw;
 }
 
-.float-right{
+.float-right {
     float: right;
 }
 
-.float-left{
+.float-left {
     float: left;
 }
 
-article{
+article {
     padding: 0px 10px;
 }
 
-p{
+p {
     text-align: justify;
-    text-indent: 5em; 
+    text-indent: 5em;
 }
 
 footer {
