--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,11 @@ a:hover {
     height: 2.5em;
 }
 
-header {
+header{
+    background-color: var(--bg_header);
+}
+
+.title {
     border: 2px solid green;
     display: block;
     margin: 0 auto;
