--- a/css/style.css
+++ b/css/style.css
@@ -199,37 +199,42 @@ footer {
 
 /* ANIMATIONS */
 @keyframes slideInLeft {
-    from {
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible;
+    0% {
+        transform: translateX(-100%) scaleX(1) scaleY(1);
+        transform-origin: 100% 50%;
+        filter: blur(40px);
+        opacity: 0;
     }
 
-    to {
-        transform: translate3d(0, 0, 0);
+    100% {
+        transform: translateX(0) scaleY(1) scaleX(1);
+        transform-origin: 50% 50%;
+        filter: blur(0);
+        opacity: .6;
     }
 }
 
 @keyframes slideOutLeft {
-    from {
-        transform: translate3d(0, 0, 0);
+    0% {
+        transform: translateX(0) scaleY(1) scaleX(1);
+        transform-origin: 50% 50%;
+        filter: blur(0);
+        opacity: .6;
     }
 
-    to {
-        visibility: hidden;
-        transform: translate3d(-100%, 0, 0);
+    100% {
+        transform: translateX(-1000px) scaleX(2) scaleY(0.2);
+        transform-origin: 100% 50%;
+        filter: blur(40px);
+        opacity: 0;
     }
 }
 
 .navbar iframe {
-    animation-name: slideOutLeft;
-
-    animation-duration: 0.25s;
-    animation-fill-mode: both;
+    animation: slideOutLeft 0.45s cubic-bezier(0.755, 0.050, 0.855, 0.060) both;
+    box-shadow: .1em 0 .5em rgba(0, 0, 0, 50%);
 }
 
 .navbar:hover iframe {
-    animation-name: slideInLeft;
-
-    animation-duration: 0.25s;
-    animation-fill-mode: both;
+    animation: slideInLeft 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
