--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --bg: white;
     --bg_header: rgba(255, 255, 255, 0.9);
@@ -240,6 +244,7 @@ footer {
     border-radius: 4px;
     box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 50%);
 }
+
 ::-webkit-scrollbar-thumb:active {
     box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 50%);
 
