added the <main> bg (which is partially transparent)

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
 
 :root {
     --bg: white;
+    --bg80: rgba(255, 255, 255, 80%);
     --bg_header: rgba(255, 255, 255, 0.9);
     --fontBase: black;
     --fontTitle: black;
