--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a:hover {
 }
 
 .blank-div {
-    height: calc(50vh - 100px);
+    height: 50vh;
 }
 
 .head-img img {
@@ -251,10 +251,9 @@ main {
     background-color: var(--bg80);
     display: block;
     margin: 0 auto;
-    margin-top: 50vh;
     width: 83vw;
     z-index: 1;
-    padding: 1.5em;;
+    padding: 1.5em;
 }
 
 section {
