--- a/css/style.css
+++ b/css/style.css
@@ -197,12 +197,13 @@ h3,
     font-weight: 100;
 }
 
-.subtitle,
-h1 {
+.subtitle {
     text-align: center;
 }
 
 .subtitle {
+    margin-top: 10px;
+    border-top: 1px solid var(--main_color);
     padding-top: 10px;
 }
 
@@ -271,6 +272,10 @@ section {
     border-top: 1px solid var(--main_color);
 }
 
+.no-top-separator {
+    border-top: none;
+}
+
 .float-right {
     float: right;
 }
@@ -302,6 +307,7 @@ article {
 p {
     text-align: justify;
     text-indent: 2em;
+    margin: auto auto 16px auto;
 }
 
 footer {
