--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,9 @@ h3,
 }
 
 .subtitle {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     margin-top: 10px;
     border-top: 1px solid var(--main_color);
