--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,7 @@ footer iframe {
 
 figure {
     margin: 20px;
+    margin-top: 10px;
     padding: 5px 0px;
     font-weight: 100;
     border-bottom: 1px solid;
