--- a/css/mobile.css
+++ b/css/mobile.css
@@ -12,7 +12,7 @@ html {
 :root {
     --bg: white;
     --bg80: rgba(255, 255, 255, 80%);
-    --bg_header: rgba(255, 255, 255, 0.9);
+    --bg_header: white;
     --fontBase: black;
     --fontTitle: black;
     --Hue: 176;
@@ -57,12 +57,48 @@ main ul {
 }
 
 header {
-    display: none;
+    background-color: var(--bg_header);
+    position: fixed;
+    min-height: 100px;
+    padding-bottom: 10px;
+    padding-top: 1px;
+    top: 0;
+    z-index: 3;
+    box-shadow: 0 .3em .3em rgba(0, 0, 0, 25%);
+}
+.title {
+    display: block;
+    margin: 0 auto;
+    width: 100vw;
+    font-weight: 100;
+}
+.title .logo50,
+.title .logo80 {
+    margin: 0 auto;
+}
+.logo50 {
+    display: block;
+    width: 100px;
+    height: 50px;
+    background: url("../images/logo50.png") left center;
+}
+.logo80 {
+    display: block;
+    width: 160px;
+    height: 80px;
+    background: url("../images/logo80.png") left center;
+}
+.subtitle {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 10px;
+    border-top: 1px solid var(--main_color);
+    padding-top: 10px;
+    width: 50vw;
 }
 
-.title {
-    display: none;
-}
 
 aside.navbar img {
     display: none;
