youtube scales with screen

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -157,8 +157,10 @@ figure * {
 }
 
 .yt-integration {
-    width: 25em;
-    height: 15em;
+    width: 500px;
+    max-width: 50vw;
+    height: 300px;
+    max-height: calc(50vw * 9 / 16);
     border-radius: 1em;
 }
 .source {
