--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,9 @@ figure * {
 
 .yt-integration {
     width: 500px;
+    max-width: 50vw;
     height: 300px;
+    max-height: calc(50vw * 9 / 16);
     border-radius: 1em;
 }
 
