removed border in yt integrations

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -162,6 +162,7 @@ figure * {
     height: 300px;
     max-height: calc(50vw * 9 / 16);
     border-radius: 1em;
+    border: 0;
 }
 .source {
     float: right;
