--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ a:hover {
 
 .header-nav a {
     color: var(--fontBase);
+    padding-left: 5px;
     text-decoration: none;
     font-weight: normal;
     display: block;
