--- a/css/mobile.css
+++ b/css/mobile.css
@@ -138,10 +138,16 @@ section {
 footer {
     height: 12.5vh;
     width: 100vw;
+    margin: 0;
+    padding: 0;
+    opacity: .8;
 }
 
 footer iframe {
     border: 0;
+    height: 12.5vh;
+    width: 100vw;
+    overflow: auto;
 }
 
 article {
