--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,9 @@ footer iframe {
     height: 12.5vh;
     width: 100vw;
 }
-
+.footer{
+    display: flex;
+}
 .footer h2{
     margin-bottom: 10px;
 }
@@ -356,7 +358,9 @@ footer iframe {
     text-indent: 0;
     margin-left: 15px;
 }
-
+.footer>*{
+    display: inline-block;
+}
 .contributors {
     font-style: italic;
     font-weight: 500 !important;
@@ -365,14 +369,14 @@ footer iframe {
 
 .authors{
     float: right;
-    width: 50%;
+    flex: 2;
     margin: -19px 0 0 15px;
     padding-left: 5px;
     border-left: 1px solid var(--main_color);
 }
 
 .footer > :not(.authors){
-    width: 50%;
+    flex: 1;
     text-align: right;
 }
 
