--- a/css/mobile.css
+++ b/css/mobile.css
@@ -176,6 +176,7 @@ figure * {
     max-height: calc(50vw * 9 / 16);
     border-radius: 1em;
     border: 0;
+    margin: .5em auto;
 }
 
 .source {
