--- a/css/mobile.css
+++ b/css/mobile.css
@@ -197,3 +197,16 @@ figure * {
 .profile p{
     font-style: italic;
 }
+.spotify-integ>div{
+    max-width: 300px;
+    height: 80px;
+    margin: .5em auto;
+    z-index: 2;
+}
+.spotify-integ iframe {
+    max-width: 300px;
+    height: 80px;
+    margin: 0;
+    padding: 0;
+    border-radius: 1em;
+}
