--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,10 @@ main {
     background-image: url("../images/musicBackgrounds/metal.jpg");
 }
 
+.rock-bg {
+    background-image: url("../images/musicBackgrounds/rock.jpg");
+}
+
 section {
     margin-top: 45px;
     border-top: 1px solid var(--main_color);
