--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ figure * {
     margin: 0;
     padding: 0;
     border-radius: 1em;
+    transition: height .5s;
 }
 
 .spotify-integ iframe:hover {
