--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,10 @@ footer iframe {
     border-radius: 100%;
 }
 
+.rounded-corners {
+    border-radius: 1em;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
 }
