more depth in the text

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+    text-shadow: 0 1px 0 white;
 }
 
 a {
@@ -463,6 +464,7 @@ footer iframe {
     border-radius: 10px;
     background-color: var(--accent_color_medium);
     font-size: 0.75em;
+    text-shadow: none;
 }
 
 .button:hover {
