--- a/css/mobile.css
+++ b/css/mobile.css
@@ -33,6 +33,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+    text-shadow: 0 1px 0 white;
 }
 
 .metal-bg {
