--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,7 @@ li {
     background-color: var(--accent_color_medium);
     font-size: 0.75em;
     text-shadow: none;
+    transition: background-color .25s;
 }
 
 .button:hover {
