--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,13 @@ a:hover {
     /* https://codepen.io/sosuke/pen/Pjoqqp */
     filter: invert(75%) sepia(100%) saturate(357%) hue-rotate(108deg) brightness(93%) contrast(93%);
 }
-
+.spotify-icon{
+    height: 1.2em;
+    transition: filter .25s;
+}
+.spotify-icon:hover{
+    filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
+}
 .header-nav a img {
     height: 1.25em;
     transform: translate(0, 50%);
