--- a/css/mobile.css
+++ b/css/mobile.css
@@ -222,3 +222,7 @@ figure * {
     bottom: 1ex;
     font-size: 80%;
 }
+.spotify-icon{
+    height: 1.6em;
+    filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
+}
